Fix navbar alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -219,3 +219,9 @@
   max-height: 843px;
 
  }
+
+.nikn-navbar {
+  float: none;
+  margin: 0 auto;
+  text-align: center;
+}
